objects/ManyWho_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>FlowId__c</fullName>
        <label>FlowId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlowVersionId__c</fullName>
        <label>FlowVersionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NavigationElementId__c</fullName>
        <label>NavigationElementId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Player__c</fullName>
        <label>Player</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant__c</fullName>
        <label>Tenant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ManyWho Settings</label>
</CustomObject>